# Projekt_PEA

./: README.md
P1/: CMakeLists.txt  TODO.txt  main.cpp
P1/algorithms/: BB.cpp  BB.h  BF.cpp  BF.h  DP.cpp  DP.h
P1/data/: data10.txt  data3.txt  data4.txt  data5.txt  data6.txt
P1/data_structures/: Graph.cpp  Graph.h  MyStack.cpp  MyStack.h  Stack.cpp  Stack.h  StackNode.cpp  StackNode.h
P1/tests/: AutoTests.cpp  AutoTests.h
P1/utils/: Menu.cpp  Menu.h  Time.h
P2/: CMakeLists.txt  main.cpp
P2/algorithms/: Genetic.cpp  Genetic.h  TS.cpp  TS.h
P2/data/: data10.txt  data11.txt  data12.txt  data13.txt  data14.txt  data15.txt  data16.txt  data17.txt  data18.txt  data19.txt  data20.txt  data21.txt  data22.txt  data23.txt  data24.txt  data25.txt  data26.txt  data27.txt  data3.txt  data5.txt  data6.txt  data7.txt  data8.txt  data9.txt  tsp_10b.txt  tsp_10c.txt
P2/data_structures/: Graph.cpp  Graph.h  Move.cpp  Move.h  MoveQueue.cpp  MoveQueue.h  Path.cpp  Path.h  Stack.cpp  Stack.h  StackNode.h
P2/results/: results1.txt  stats.txt
P2/tests/: AutoTests.cpp  AutoTests.h  Time.cpp
P2/utils/: Menu.cpp  Menu.h  Time.cpp
